# pmacct

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  CONFIG-KEYS  COPYING  ChangeLog  Dockerfile  EXAMPLES  FAQS  Highly availability of BGP.pptx  INSTALL  KNOWN-BUGS  LICENSE.template  Makefile.am  Makefile.am.rej  Makefile.in  NEWS  QUICKSTART  QUICKSTART.md  README  README.md  TODO  TOOLS  UPGRADE  VERSION  Vagrantfile  acinclude.m4  aclocal.m4  autogen.sh  build-avro.sh  build-librdkafka.sh  build-pmacct.sh  configure  configure.ac  configure.ac.orig  configure.ac.rej  configure.in  docker-build.sh  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
ci/: Dockerfile-centos-8-for-pmacct  Dockerfile-centos-8.1-for-pmacct  Dockerfile-rockylinux-8-for-pmacct  Dockerfile-rockylinux-9-for-pmacct  Dockerfile-ubuntu-bionic-for-pmacct  Dockerfile-ubuntu-focal-for-pmacct  Dockerfile-ubuntu-jammy-for-pmacct  deps.sh  script.sh
docker/: Dockerfile-centos-8.1-for-pmacct  Dockerfile-ubuntu-bionic-for-pmacct  Makefile  README.md  build_from_travis.sh  build_inside.sh  build_outside.sh  build_outside_2.sh  how-to-build-locally-using-docker.md  pmacct-deps.sh  pmacct-self.sh
docs/: BGP_BMP_METRICS.md  BUILD.md  DOCKER.md  FLOW_AUGMENTATION_PROCESS_DESCRIPTION.md  Highly_availability_of_BMP_presentation.pptx  INTERNALS  IPFIX  LOOKING_GLASS_FORMAT  MSGLOG_DUMP_FORMATS  PLUGINS  README.telemetry  README_BGP_BMP_HA.md  README_BMP_HA.md  README_Lin.md  SIGNALS  TRIGGER_VARS
examples/: agent_to_peer.map  agent_to_peer.map.example  allow-list.example  allow.lst.example  bgp_agent.map.example  bgp_md5.lst.example  bgp_xconnects.map.example  flow_to_rd.map.example  gnuplot-example.sh  gnuplot.script.example  iface_to_rd.map.example  is_symmetric.map.example  lpref.map.example  med.map.example  networks.lst.example  nfacctd-print.conf.example  nfacctd-sql.conf.example  nfacctd-sql_v1.conf.example  nfacctd-sql_v2.conf.example  pcap_interfaces.map.example  peers.map.example  pmacctd-imt.conf.example  pmacctd-multiple-plugins.conf.example  pmacctd-sql.conf.example  pmacctd-sql_v1.conf.example  pmacctd-sql_v2.conf.example  pmacctd-sqlite3.conf.example  pmacctd-sqlite3_v4.conf.example  ports.lst.example  pretag.map.example  primitives.lst  primitives.lst.example  probe_netflow.conf.example  probe_sflow.conf.example  rrdtool-example.sh  sampling.map.example  tee_receivers.lst.example
include/: extract.h  fddi.h  ieee802_11.h  ip6.h  llc.h  sll.h
m4/: ac_check_typedef.m4  ac_linearize_path.m4  ax_lib_mysql.m4
sql/: README.64bit  README.GeoIP  README.IPv6  README.agent_id2  README.cos  README.country  README.custom_primitives  README.etype  README.export_proto  README.iface  README.is_symmetric  README.label  README.mask  README.mpls  (+46 more)
src/: Makefile.am  Makefile.in  acct.c  addr.c  addr.h  amqp_common.c  amqp_common.h  amqp_plugin.c  amqp_plugin.h  base64.c  base64.h  bpf_filter.c  build_config.h  build_config.h.in  buildflags.txt.in  cfg.c  cfg.h  cfg_handlers.c  cfg_handlers.h  classifier.c  classifier.h  conntrack.c  conntrack.h  crc32.c  crc32.h  custom_print_plugin.c  custom_print_plugin.h  ha.c  ha.h  imt_plugin.c  imt_plugin.h  ip_flow.c  ip_flow.h  ip_frag.c  ip_frag.h  jansson.c  jhash.h  jsonudp_plugin.c  jsonudp_plugin.h  kafka_common.c  (+113 more)
src/bgp/: Makefile.am  Makefile.in  bgp.c  bgp.h  bgp_aspath.c  bgp_aspath.h  bgp_blackhole.c  bgp_blackhole.h  bgp_community.c  bgp_community.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_hash.c  bgp_hash.h  bgp_lcommunity.c  bgp_lcommunity.h  bgp_lg.c  bgp_lg.h  bgp_logdump.c  bgp_logdump.h  bgp_lookup.c  bgp_lookup.h  bgp_ls-data.h  bgp_ls.c  bgp_ls.h  bgp_msg.c  bgp_msg.h  bgp_packet.h  bgp_prefix.c  bgp_prefix.h  bgp_recvs-data.h  bgp_recvs.c  bgp_recvs.h  bgp_table.c  bgp_table.h  bgp_util.c  bgp_util.h  bgp_xcs-data.h  bgp_xcs.c  bgp_xcs.h
src/bmp/: Makefile.am  Makefile.in  bmp-globals.c  bmp.c  bmp.h  bmp_logdump.c  bmp_logdump.h  bmp_lookup.c  bmp_lookup.h  bmp_msg.c  bmp_msg.h  bmp_rpat.c  bmp_rpat.h  bmp_tlv.c  bmp_tlv.h  bmp_util.c  bmp_util.h
src/custom_packet_parsing/: README.md  dynamic_loading.c  dynamic_loading.h  packet_processor.c  packet_processor.h
src/dynlib/: README.md  dynamic_loading.c  dynamic_loading.h
src/ebpf/: Makefile.am  ebpf_rp_balancer.c  ebpf_rp_balancer.h  ebpf_udp.c  ebpf_udp.h
src/external_libs/: Makefile.am
src/filters/: Makefile.am  bloom.c  bloom.h  murmur2.c  murmur2.h
src/intstats/: Makefile.am  intstats.c  intstats.h
src/isis/: Makefile.am  Makefile.in  checksum.c  checksum.h  dict.c  dict.h  hash.c  hash.h  isis-data.h  isis-globals.c  isis.c  isis.h  isis_adjacency.c  isis_adjacency.h  isis_circuit.c  isis_circuit.h  isis_common.h  isis_constants.h  isis_csm.c  isis_csm.h  isis_dynhn.c  isis_dynhn.h  isis_events.c  isis_events.h  isis_flags.c  isis_flags.h  isis_ll.h  isis_lsp.c  isis_lsp.h  isis_misc.c  isis_misc.h  isis_network.h  isis_pdu.c  isis_pdu.h  isis_route.c  isis_route.h  isis_spf.c  isis_spf.h  isis_tlv.c  isis_tlv.h  (+19 more)
src/ndpi/: Makefile.am  ndpi.c  ndpi.h  ndpi_private.h  ndpi_util.c  ndpi_util.h
src/nfprobe_plugin/: Makefile.am  Makefile.in  common.h  convtime.c  convtime.h  netflow1.c  netflow5.c  netflow9.c  nfprobe_plugin.c  nfprobe_plugin.h  strlcat.c  sys-tree.h  treetype.h
src/packet_processor/: README.md  packet_processor.c  packet_processor.h
src/rpki/: Makefile.am  rpki.c  rpki.h  rpki_lookup.c  rpki_lookup.h  rpki_msg.c  rpki_msg.h  rpki_util.c  rpki_util.h
src/sfprobe_plugin/: Makefile.am  Makefile.in  sflow.h  sflow_agent.c  sflow_api.h  sflow_poller.c  sflow_receiver.c  sflow_sampler.c  sfprobe_plugin.c
src/tee_plugin/: Makefile.am  Makefile.in  tee_plugin.c  tee_plugin.h  tee_recvs-data.h  tee_recvs.c  tee_recvs.h
src/telemetry/: Makefile.am  Makefile.in  telemetry.c  telemetry.h  telemetry_ebpf.c  telemetry_ebpf.h  telemetry_logdump.c  telemetry_logdump.h  telemetry_msg.c  telemetry_msg.h  telemetry_util.c  telemetry_util.h
test/: .gitignore  Makefile.am
test/nfacctd_nfv9_accounting/: nfacctd.conf  test_nfacctd_nfv9_basic_accounting.py
(+570 files in other folders)
